--- a/style/accueil.css
+++ b/style/accueil.css
@@ -1,53 +1,41 @@
+button,
+input {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  letter-spacing: 1.4px;
+}
+
 body{
     margin: 0;
     padding:0;
 }
 
 .header-image {
-  /* background-image: url("./image/pexels-mike-193998.jpg");
-  height: 85vh;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 100% 68%;
-  position: relative; */
-  background-color: black;
-  height: 86vh;
-  z-index: -2;
-  /* border-bottom: 8px solid #000000; */
+    background-color: black;
+    height: 86vh;
+    z-index: -2;
 
-  /* margin-top: 8px; */
-}
-.header-image::after {
-  /* content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgb(0, 0, 0);
-  opacity: 1;
-  z-index: -1; */
+
 }
 
 .header-menu {
-  display: flex;
-  justify-content: space-between;
-  height: 10vh;
-  border-bottom: 1px solid #000000;
-  position: relative;
-  position: sticky;
-  top: 0;
-  background-color: white;
-  z-index: 1;
-  padding-top: 11px;
+    display: flex;
+    justify-content: space-between;
+    height: 10vh;
+    border-bottom: 1px solid #000000;
+    position: relative;
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 1;
 
-  
+
 }
 
+
 .header {
-  display: flex;
-  flex-direction: column;
-  height: 87vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .header-menu-left {
@@ -55,35 +43,37 @@ body{
     padding-left: 400px;
     padding-top: 19px;
     display: flex;
-    flex-direction: row;
+    display: flex;
     justify-content: space-around;
     width: 40%;
+    display: flex;
+    
 }
 
+
 .header-menu-right {
-  padding-top: 2px;
-  margin-right: 20px;
-  /* margin-right: 11px;
-    display: flex;
-    justify-content: space-between;
-    width: 188px;
-    margin-TOP: 43px;
-    margin-bottom: 43px;
-    margin-right: 36px;
-    background-color: #fbc531; */
+    padding-top: 9px;
+    margin-right: 20px;
 }
 
 .header-menu-right button {
-  background-color: #fbc531;
-  border-radius: 30px;
-  border: none;
-  padding-left: 20px;
-  padding-right: 20px;
+    background-color: #fbc531;
+    border-radius: 30px;
+    border: none;
+    padding-left: 20px;
+    transition: 500ms;
 }
 
+.header-menu-right button:hover {
+    background-color: transparent;
+    border: 2px solid black;
+    color: #000000;
+}
+
+
 .header-menu-right button p {
-  font-weight: 600;
-  font-size: 15px;
+    font-weight: 600;
+    padding-right: 11px;
 }
 
 .header-menu-right1 {
@@ -96,34 +86,37 @@ body{
     border: none;
     padding-left: 20px;
     padding-right: 20px;
-  }
-  
-  .header-menu-right1 button p {
+}
+
+.header-menu-right1 button p {
     font-weight: 600;
     font-size: 15px;
-  }
+}
 
 .header-menu-right1{
     display: none;
 }
 
 .lien-menu {
-  color: rgb(0, 0, 0);
-  font-weight: 700;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 16px;
-
+color: rgb(0, 0, 0);
+font-weight: 700;
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+font-size: 16px;
 }
 
 .header-menu-left a {
-  text-decoration: none;
+text-decoration: none;
+}
+
+.logo{
+    padding-left: 30px;
 }
 
 .logo img {
   margin-bottom: 10px;
   width: 90px;
   margin-left: 30px;
-
+  padding-top: 6px;
 }
 .header-image {
   display: flex;
@@ -269,8 +262,8 @@ body{
 }
 
 .footer .left {
-   padding-bottom: 60px;
-   width: 30%;
+    padding-bottom: 60px;
+    width: 30%;
 }
 
 .footer .center {
@@ -285,20 +278,18 @@ body{
     width: 30%;
     display: flex;
     justify-content: flex-end;
-   
-}
+} 
 
 .footer .right img{
     width: 8%;
     padding-left: 10px;
-   
 }
 
 @media (max-width: 376px){
 
     .footer{
         height: 55vh;
-        flex-direction:
+        
     }
 
     .footer .left {
@@ -332,21 +323,6 @@ body{
 
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 @media (max-width: 990px){
     .header-menu { 
     height: 12vh;
@@ -355,7 +331,7 @@ body{
         padding: 0;
     }
 }
-    
+
 
 @media (max-width: 904px) {
     .header-menu-left {
@@ -403,8 +379,40 @@ body{
 
 @media (max-width: 749px){
     .header-menu-left {
-        padding-left: 70px;
+        display: none;
+
     }
+    /* header .navbar-links {
+        position: fixed;
+        top: 0;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+        background-color: var(--black);
+        z-index: 99;
+        height: 100%;
+        width: 100%;
+        color: var(--light);
+    }
+    header .navbar-links li {
+        padding: 10px;
+    }
+    header .navbar-links li a {
+        color: var(--light);
+        font-size: 1.4rem;
+    }
+    header .navbar-links .close {
+        display: block;
+        position: absolute;
+        top: 15px;
+        right: 25px;
+    }
+    header .navbar-links .close i {
+        color: white;
+    } */
 
     .header-menu-right {
         padding-top: 2px;
@@ -421,8 +429,6 @@ body{
 
 }
 
-
-
 @media (max-width: 525px){
     .header-menu-left{
 
@@ -434,13 +440,7 @@ body{
     
 }
 
-
-
 @media (max-width: 700px){
-    .header-menu-left {
-        /* display: none;   */
-    }
-    
     .header-image-right{
         display: none;
     }
@@ -475,7 +475,6 @@ body{
     }
     .main .article2 .text1{
         display: block;
-       
     }
     .main .article2 .text{
         display: none;
@@ -491,12 +490,10 @@ body{
     .header-menu-right{
         display: none;
     }
-
-
 }
 
 
-@media  (max-width: 663px){
+@media  (max-width: 663px) {
     .header-image-left p {
         font-size: 18px;
         line-height: 25px;
@@ -527,8 +524,6 @@ body{
 }
 
 @media (max-width: 590px) {
-
-   
     .header-menu-right {
         margin-left: 219px
     }
@@ -546,6 +541,30 @@ body{
         font-size: 33px;
     }
     
+}
+
+@media  (max-width: 415px) {
+    .header-menu-right1 {
+        right: 0px;
+        bottom: 0px;
+        top: 0px;
+        margin-left: 144px;
+        margin-top: 434px;
+        left: 0px;
+    }
+    .header{
+        height: 59vh;
+    }
+    #article-flex.article2 {
+        margin-left: 32px;
+    }
+    #article-flex {
+        margin-right: -49px;
+    }
+    #article-flex.article1{
+        margin-left: 29px;
+    margin-right: 25px;
+    }
 }
 
 @media  (max-width: 376px){
@@ -609,9 +628,4 @@ body{
     .header{
         height: 70vh;
     }
-
 }
-
-
-
-
