--- a/style/contact1.css
+++ b/style/contact1.css
@@ -7,8 +7,10 @@ body{
     background-color: black;
     height: 86vh;
     z-index: -2;
+}
 
-
+.toggle{
+    display: none;
 }
 
 .header-menu {
@@ -54,6 +56,12 @@ body{
     padding-left: 20px;
 }
 
+.header-menu-right button:hover {
+    background-color: transparent;
+    border: 2px solid black;
+    color: #000000;
+}
+
 
 .header-menu-right button p {
     font-weight: 600;
@@ -88,6 +96,14 @@ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubun
 font-size: 16px;
 }
 
+#lien-menu3 {
+    border-bottom: 4px solid #fbc531
+    }
+
+.header-menu-left #lien-menu4{
+        display: none;
+    }
+    
 .header-menu-left a {
 text-decoration: none;
 }
@@ -696,7 +712,7 @@ input {
 
 @media  (max-width: 376px){
     .header-menu .logo img{
-        margin-top: 17px;
+        margin-top: 10px;
     }
     
     .header-menu-right1 {
@@ -743,11 +759,79 @@ input {
     .footer{
         margin-top: 5vh;
     }
+    .screen-body {
+        display: flex;
+        flex-direction: column;
+    }
+    .screen-body-item.left {
+        flex-direction: row;
+    }
+
+    .container {
+        padding-top: 15px;
+    }
 
     .header-menu-left{
-        padding-left: 14px;
-        padding-top: 28px;
+        padding: 0; 
+        top: 12vh;
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        line-height: 4;
+        justify-content: space-around;
+        background-color: #000000;
+        height: 70%;
+        transform: translateX(100%);
+        transition: 0.5s;
+        position: fixed;
     }
+
+    .header-menu-left a{
+        position: relative;
+        width: 100%;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        color: white;
+        border: none;
+        font-size: 1.2rem;
+    }
+
+    .toggle{
+        height: 100%;
+        padding: 0 20px;
+        display: flex;
+        font-size: 2rem;
+        align-items: center;
+    }
+
+    .ferme{
+        display: none;
+    }
+    .ouvre{
+        display: block;
+    }
+
+    .open .ouvre{
+        display: none;
+    }
+
+    .open .ferme{
+        display: block;
+    }
+
+    .open .header-menu-left{
+        transform: translateX(0);
+    }
+
+    .header-menu-left #lien-menu3{
+        border-bottom: none
+    }
+    .header-menu-left #lien-menu4{
+        display: flex;
+        padding-bottom: 40px;
+    }
+    
     .header-image{
         height: 68vh;
     }
