--- a/style/reservation.css
+++ b/style/reservation.css
@@ -1,33 +1,3 @@
-input[type='radio']:checked:after {
-    width: 15px;
-    height: 15px;
-    border-radius: 15px;
-    top: -2px;
-    left: -1px;
-    position: relative;
-    background-color: #fbc531;
-    content: '';
-    display: inline-block;
-    visibility: visible;
-    border: 2px solid white;
-}
-
-input[type='radio']:after {
-    width: 15px;
-    height: 15px;
-    border-radius: 15px;
-    top: -2px;
-    left: -1px;
-    position: relative;
-    background-color: #d1d3d1;
-    content: '';
-    display: inline-block;
-    visibility: visible;
-    border: 2px solid white;
-}
-
-
-
 body{
     margin: 0;
     padding:0;
@@ -37,8 +7,10 @@ body{
     background-color: black;
     height: 86vh;
     z-index: -2;
+}
 
-
+.toggle{
+    display: none;
 }
 
 .cont-form{
@@ -90,6 +62,12 @@ body{
     border-radius: 30px;
     border: none;
     padding-left: 20px;
+}
+
+.header-menu-right button:hover {
+    background-color: transparent;
+    border: 2px solid black;
+    color: #000000;
 }
 
 
@@ -170,6 +148,34 @@ text-decoration: none;
   align-items: center;
   justify-content: flex-end;
   margin-right: 38px;
+}
+
+input[type='radio']:checked:after {
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+    top: -2px;
+    left: -1px;
+    position: relative;
+    background-color: #fbc531;
+    content: '';
+    display: inline-block;
+    visibility: visible;
+    border: 2px solid white;
+}
+
+input[type='radio']:after {
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+    top: -2px;
+    left: -1px;
+    position: relative;
+    background-color: #d1d3d1;
+    content: '';
+    display: inline-block;
+    visibility: visible;
+    border: 2px solid white;
 }
 
 .header .header-menu .logo {
@@ -937,7 +943,7 @@ error contact
 .reservation {
     position: relative;
     width: 94%;
-    padding: 15px 0px 30px 40px;
+    padding: 15px 0px 30px 0px;
 }
 
 .vehicules {
@@ -1372,7 +1378,7 @@ error contact
 
 @media  (max-width: 376px){
     .header-menu .logo img{
-        margin-top: 17px;
+        margin-top: 10px;
     }
     
     .header-menu-right1 {
@@ -1421,9 +1427,58 @@ error contact
     }
 
     .header-menu-left{
-        padding-left: 14px;
-        padding-top: 28px;
+        padding: 0; 
+        top: 12vh;
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        line-height: 4;
+        justify-content: space-around;
+        background-color: #000000;
+        height: 70%;
+        transform: translateX(100%);
+        transition: 0.5s;
+        position: fixed;
     }
+
+    .header-menu-left a{
+        position: relative;
+        width: 100%;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        color: white;
+        padding-bottom: 39px;
+        font-size: 1.2rem;
+    }
+
+    .toggle{
+        height: 100%;
+        padding: 0 20px;
+        display: flex;
+        font-size: 2rem;
+        align-items: center;
+    }
+
+    .ferme{
+        display: none;
+    }
+    .ouvre{
+        display: block;
+    }
+
+    .open .ouvre{
+        display: none;
+    }
+
+    .open .ferme{
+        display: block;
+    }
+
+    .open .header-menu-left{
+        transform: translateX(0);
+    }
+
     .header-image{
         height: 68vh;
     }
